added images, added style changes, fixed typos

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <li><a href="#about" class="menu-btn">About</a></li>
                 <li><a href="#services" class="menu-btn">Services</a></li>
                 <li><a href="#skills" class="menu-btn">Skills</a></li>
-                <li><a href="#teams" class="menu-btn">Teams</a></li>
+                <li><a href="#projects" class="menu-btn">Projects</a></li>
                 <li><a href="#contact" class="menu-btn">Contact</a></li>
             </ul>
             <div class="menu-btn">
@@ -42,7 +42,7 @@
                 <div class="text-1">Hello, my name is</div>
                 <div class="text-2">Matthew Harrison</div>
                 <div class="text-3">And I'm a <span class="typing"></span></div>
-                <a href="#">Hire me</a>
+                <a href="#contact">Hire me</a>
             </div>
         </div>
     </section>
@@ -53,12 +53,11 @@
             <h2 class="title">About me</h2>
             <div class="about-content">
                 <div class="column left">
-                    <img src="images/profile-1.jpeg" alt="">
+                    <img src="images/profile-1.png" alt="">
                 </div>
                 <div class="column right">
                     <div class="text">I'm Matthew and I'm a <span class="typing-2"></span></div>
-                    <p>FullStack Developer that has experience working with ethereum and bitcoin blockchain network for building smart contracts and running my own bitcoin node built from scratch. I am also a fullstack webdeveloper that has worked with Reactjs, HTML5, CSS, SCSS, styled components to build mobile responsive frontend. I have used Nodejs, express, mongodb, postgresql for the backend of my site to build blogs with secure databases. I have also been able to set selfhost my own server using ubuntu 20.04, and has routed all communications through the TOR browser after setting up iptables communications. With this I am able to ssh into my server anywhere and manage communications. Although some already set themes and interfaces most people work with do not require such strenuous security measures because they have already been built in it is important when building systems from scratch to avoid hackers. I can provide optimum performance, security, and most importantly build a easy UI and a solid UX.</p>
-                    <a href="#">Download CV</a>
+                    <p>FullStack and blockchain developer with a strong understanding of building real world applications and secure systems. I have built e-commerce applications using React experimenting with different state managements tools such as GraphQl, Redux Thunk and Redux Saga.  I have been able identify the best solutions tools, solutions and frameworks in each of my projects. A project could require Reactjs, HTML5, CSS, SCSS, styled components, Nodejs, express, Mongodb, postgresql, docker, netcore, nginx, tor and let's encrypt and if I do not know it I will learn it, ask my peers questions and not be afraid to explore new tools, frameworks and languages. I am a good listener and will always do what is best to build a scalable enterprise level project. I have experience working with the Ethereum and Bitcoin blockchain. My desire to learn, fail and commitment will help me improve as a developer and that is my intention.</p>
                 </div>
             </div>
         </div>
@@ -72,22 +71,22 @@
                 <div class="card">
                     <div class="box">
                         <i class="fas fa-paint-brush"></i>
-                        <div class="text">Web Design(fullstack)</div>
-                        <p>I have built ecommerce website with front and backend for handling state changes in the shopping cart and payments via stripe. I have used Reactjs, react hooks, react router dom, express and nodejs. Firebase for the database and google authentication. I have also built a blog site using express, ejs, and mongodb.</p>
+                        <div class="text">WebDev(full-stack)</div>
+                        <p>Built scalable, enterprise level ecommerce website with front and backend using React, react hooks, redux, react-router, express, firebase, session persistance and more. I have also built a blog site using express, ejs, and mongodb.</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
                         <i class="fas fa-chart-line"></i>
                         <div class="text">Ethereum smart contracts</div>
-                        <p>I have built a simple smart contracts for lottery using solidity, web3, and have tested through metamask on the rhinbey test network and gnache. I have also built simple PWAs like all my sites that use react scroll, react router dom for navigation.</p>
+                        <p>Built a simple lottery smart contract using solidity, web3, remix and metamask on the ethereum blockchain.</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
                         <i class="fas fa-code"></i>
-                        <div class="text">Bitcoin Node, server and cybersecurity</div>
-                        <p>Use the tor browser for routing traffic through server and setting up iptables and ssh to ensure secure communication between ubuntu 20.04 server running bitcoin node. Test and update bitcoin core on the system.</p>
+                        <div class="text">Bitcoin Node/cybersecurity</div>
+                        <p>Built a secure system with security rules that routes traffic through the tor browser for bitcoin payment gateway. Rules set up using iptables and I used ssh to remotely and securely connect to the ubuntu server from another device.</p>
                     </div>
                 </div>
                </div>
@@ -102,8 +101,8 @@
             <div class="skills-content">
                 <div class="column left">
                     <div class="text">Creative skills & experiences.</div>
-                    <p>Build easy to use UI and beautiful UX designs to grab user's attention and set up SEO for optimum performance. I also have experience building websites using wordpress and building using Divi.</p>
-                    <a href="#">Read more</a>
+                    <p>Build easy to use UI and beautiful UX designs to grab user's attention. Deploy and test apps for performance and identify the best tools, frameworks and languages needed for each project. I also have experience building websites using wordpress as well as working with the ethereum and bitcoin blockchain.</p>
+                    <a href="https://www.github.com/blainerb4" target="_blank">Learn More</a>
                 </div>
                 <div class="column right">
                     <div class="bars">
@@ -123,21 +122,21 @@
                     <div class="bars">
                         <div class="info">
                             <span>Postgresql/Firebase</span>
-                            <span>80%</span>
+                            <span>70%</span>
                         </div>
                         <div class="line js"></div>
                     </div>
                     <div class="bars">
                         <div class="info">
                             <span>HTML5</span>
-                            <span>50%</span>
+                            <span>80%</span>
                         </div>
                         <div class="line php"></div>
                     </div>
                     <div class="bars">
                         <div class="info">
                             <span>Web3/Solidity</span>
-                            <span>70%</span>
+                            <span>60%</span>
                         </div>
                         <div class="line mysql"></div>
                     </div>
@@ -153,37 +152,47 @@
             <div class="carousel owl-carousel">
                 <div class="card">
                     <div class="box">
-                        <img src="images/profile-1.jpeg" alt="">
+                        <a href="https:github.com/blainerb4/pop-pay-app" target="_blank">
+                            <img src="images/vault-1.png" alt="">
+                        </a>
                         <div class="text">Fintech Website</div>
-                        <p>Built with scss and reactjs.</p>
+                        <p>Mobile friendly React app that using styled components, media queries, react icons and react hooks to create a beautifully designed UX and easy to use UI with signup/signin components.</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="images/profile-2.jpeg" alt="">
-                        <div class="text">Robofriends</div>
-                        <p>Built with React, SCSS and context API</p>
+                        <a href="https:github.com/blainerb4/monstersapp" target="_blank">
+                            <img src="images/profile-2.png" alt="">
+                        </a>
+                        <div class="text">Monsterfriends</div>
+                        <p>React App built with the latest ecmascript, CSS and Context API.</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="images/profile-3.jpeg" alt="">
-                        <div class="text">Lottery Smart Contract Site</div>
-                        <p>Here include some of my work with smart contracts on the ethereum blockchain, web3, solidity.</p>
+                        <a href="https:github.com/blainerb4/smartfundapp" target="_blank">
+                            <img src="images/profile-3.png" alt="">
+                        </a>
+                        <div class="text">Lottery Dapp</div>
+                        <p>Lottery smart contract built on the ethereum blockchain. Developed, tested and deployed using web3, solidity, remix and metamask.</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="images/profile-4.jpeg" alt="">
+                        <a href="https:github.com/blainerb4/ecommerce-app" target="_blank">
+                            <img src="images/profile-4.png" alt="">
+                        </a>
                         <div class="text">Ecommerce website</div>
-                        <p>Built with React, styled components, react routing, express, stripe implementation.</p>
+                        <p>React app built with styled components, redux, react-routing, firebase, express, and the stripe api.</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="images/profile-5.jpeg" alt="">
+                        <a href="https:github.com/blainerb4/vc-app" target="_blank">
+                            <img src="images/profile-5.png" alt="">
+                        </a>
                         <div class="text">Virtual currency website</div>
-                        <p>Built with react, react scroll, styled components.</p>
+                        <p>Mobile friendly react app built with react-scroll, hooks, react-router and styled components.</p>
                     </div>
                 </div>
             </div>
@@ -197,7 +206,7 @@
             <div class="contact-content">
                 <div class="column left">
                     <div class="text">Get in Touch</div>
-                    <p>I am hardoworking, and I believe my desire to learn, improve and take criticism makes me a good developer. If you would like to learn more about me and my projects don't hesitate to contact me!</p>
+                    <p>I am hardworking, and I believe my desire to learn, improve and take criticism makes me a good developer. If you would like to learn more about me and my projects don't hesitate to contact me!</p>
                     <div class="icons">
                         <div class="row">
                             <i class="fas fa-user"></i>
@@ -224,7 +233,7 @@
                 </div>
                 <div class="column right">
                     <div class="text">Message me</div>
-                    <form action="#">
+                    <form action="MAILTO:blainerb4@gmail.com" method="post" enctype="text/plain">
                         <div class="fields">
                             <div class="field name">
                                 <input type="text" placeholder="Name" required>
@@ -248,7 +257,7 @@
         </div>
     </section>
 
-    <!-- footer section start <a href="https://www.codingnepalweb.com"></a>-->
+    <!-- footer section start -->
     <footer>
         <span>Created By Matthew Harrison</a> | <span class="far fa-copyright"></span> 2021 All rights reserved.</span>
     </footer>
