typos in services section

--- a/index.html
+++ b/index.html
@@ -71,21 +71,21 @@
                 <div class="card">
                     <div class="box">
                         <i class="fas fa-paint-brush"></i>
-                        <div class="text">WebDev(full-stack)</div>
+                        <div class="text">WebDev</div>
                         <p>Built scalable, enterprise level ecommerce website with front and backend using React, react hooks, redux, react-router, express, firebase, session persistance and more. I have also built a blog site using express, ejs, and mongodb.</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
                         <i class="fas fa-chart-line"></i>
-                        <div class="text">Ethereum smart contracts</div>
+                        <div class="text">Dapp</div>
                         <p>Built a simple lottery smart contract using solidity, web3, remix and metamask on the ethereum blockchain.</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
                         <i class="fas fa-code"></i>
-                        <div class="text">Bitcoin Node/cybersecurity</div>
+                        <div class="text">Blockchain</div>
                         <p>Built a secure system with security rules that routes traffic through the tor browser for bitcoin payment gateway. Rules set up using iptables and I used ssh to remotely and securely connect to the ubuntu server from another device.</p>
                     </div>
                 </div>
