--- a/index.html
+++ b/index.html
@@ -248,6 +248,9 @@
                         <div class="field textarea">
                             <textarea cols="30" rows="10" placeholder="Message.." required></textarea>
                         </div>
+                        <div class="field">
+                            <div data-netlify-recaptcha="true"></div>
+                        </div>
                         <div class="button">
                             <button type="submit">Send message</button>
                         </div>
