--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                 </div>
                 <div class="column right">
                     <div class="text">Message me</div>
-                    <form name="contact" method="POST" data-netlify="true">
+                    <form action="POST" data-netlify="true">
                         <div class="fields">
                             <div class="field name">
                                 <input type="text" placeholder="Name" required>
@@ -247,9 +247,6 @@
                         </div>
                         <div class="field textarea">
                             <textarea cols="30" rows="10" placeholder="Message.." required></textarea>
-                        </div>
-                        <div class="field">
-                            <div data-netlify-recaptcha="true"></div>
                         </div>
                         <div class="button">
                             <button type="submit">Send message</button>
