--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                 </div>
                 <div class="column right">
                     <div class="text">Message me</div>
-                    <form action="POST" data-netlify="true">
+                    <form method="POST" data-netlify="true">
                         <div class="fields">
                             <div class="field name">
                                 <input type="text" placeholder="Name" required>
